--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Picture Gallery</title>
+    <title>Photo Gallery</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -17,53 +18,53 @@
     
     <div class="carousel-container">
         <div class="carousel">
-            <div class="year-group" id="2025">
-                <h2 class="year-title">2025</h2>
-                <div class="carousel-item" data-number="1">
-                    <img src="images/DSC08861.jpg" alt="2025 Picture">
+            <div id="2025" class="year-group">
+                <div class="carousel-item">
+                    <img src="images/DSC08861.jpg" alt="2025 Picture" loading="lazy" decoding="async">
+                    <h2 class="year-title">2025</h2>
                 </div>
-                <div class="carousel-item" data-number="2">
-                    <img src="images/DSC08909.jpg" alt="2025 Picture">
+                <div class="carousel-item">
+                    <img src="images/DSC08909.jpg" alt="2025 Picture" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="3">
-                    <img src="images/DSC08956-2.jpg" alt="2025 Picture">
+                <div class="carousel-item">
+                    <img src="images/DSC08956-2.jpg" alt="2025 Picture" loading="lazy" decoding="async">
                 </div>
             </div>
 
-            <div class="year-group" id="2024">
-                <h2 class="year-title">2024</h2>
-                <div class="carousel-item" data-number="1">
-                    <img src="images/1.jpg" alt="2024 Photo 1">
+            <div id="2024" class="year-group">
+                <div class="carousel-item">
+                    <img src="images/1.jpg" alt="2024 Photo 1" loading="lazy" decoding="async">
+                    <h2 class="year-title">2024</h2>
                 </div>
-                <div class="carousel-item" data-number="2">
-                    <img src="images/2.jpg" alt="2024 Photo 2">
+                <div class="carousel-item">
+                    <img src="images/2.jpg" alt="2024 Photo 2" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="3">
-                    <img src="images/3.jpg" alt="2024 Photo 3">
+                <div class="carousel-item">
+                    <img src="images/3.jpg" alt="2024 Photo 3" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="4">
-                    <img src="images/4.jpg" alt="2024 Photo 4">
+                <div class="carousel-item">
+                    <img src="images/4.jpg" alt="2024 Photo 4" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="5">
-                    <img src="images/5.jpg" alt="2024 Photo 5">
+                <div class="carousel-item">
+                    <img src="images/5.jpg" alt="2024 Photo 5" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="6">
-                    <img src="images/6.jpg" alt="2024 Photo 6">
+                <div class="carousel-item">
+                    <img src="images/6.jpg" alt="2024 Photo 6" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="7">
-                    <img src="images/7.jpg" alt="2024 Photo 7">
+                <div class="carousel-item">
+                    <img src="images/7.jpg" alt="2024 Photo 7" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="8">
-                    <img src="images/8.jpg" alt="2024 Photo 8">
+                <div class="carousel-item">
+                    <img src="images/8.jpg" alt="2024 Photo 8" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="9">
-                    <img src="images/9.jpg" alt="2024 Photo 9">
+                <div class="carousel-item">
+                    <img src="images/9.jpg" alt="2024 Photo 9" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="10">
-                    <img src="images/10.jpg" alt="2024 Photo 10">
+                <div class="carousel-item">
+                    <img src="images/10.jpg" alt="2024 Photo 10" loading="lazy" decoding="async">
                 </div>
-                <div class="carousel-item" data-number="11">
-                    <img src="images/11.jpg" alt="2024 Photo 11">
+                <div class="carousel-item">
+                    <img src="images/11.jpg" alt="2024 Photo 11" loading="lazy" decoding="async">
                 </div>
             </div>
 
@@ -76,6 +77,28 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Add intersection observer for lazy loading
+        document.addEventListener('DOMContentLoaded', function() {
+            const imageObserver = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        const img = entry.target;
+                        if (!img.src.includes('data:image')) {
+                            img.classList.add('fade-in');
+                        }
+                        observer.unobserve(img);
+                    }
+                });
+            }, {
+                rootMargin: '50px 0px',
+                threshold: 0.1
+            });
+
+            document.querySelectorAll('.carousel-item img').forEach(img => {
+                imageObserver.observe(img);
+            });
+        });
+    </script>
 </body>
 </html> 
